--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,15 @@
 /* your code */
+
+table{
+	border: 1px solid whitesmoke;
+	border-radius:10px;
+	width:80%;
+}
+
+thead{
+	background-color: blue;
+}
+
+tr:nth-child(even) {
+   background-color: #f2f2f2;
+}
